--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title} the application!!!!!
-  p My name is Sai  
+  p Welcome to #{title} the application aaaaa!!!!!
+#  p My name is Sai  
